src/objects/Service_Now__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>ServiceNow Credentials</description>
    <fields>
        <fullName>EndpointURL__c</fullName>
        <label>EndpointURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Service Now</label>
</CustomObject>